
* A new C++ class, called gnu::autosprintf, makes it possible to use C format
  strings in C++. This is needed for proper internationalization of C++
  programs.

* xgettext now supports msgid strings in other encodings than ASCII.
  xgettext has a new option --from-code that specifies the encoding of the
  source files. The resulting POT files are UTF-8 encoded.

* Compatibility with automake-1.7.

Version 0.11.5 - August 2002

* Bug fixes in the gettext.m4 autoconf macros.

Version 0.11.4 - July 2002

* The tools now know about the ISO C 99 <inttypes.h> format string directive
  macros PRId64, PRIxMAX etc.

Version 0.11.3 - July 2002

* New program:
    autopoint - copies standard gettext infrastructure

* The documentation makes it clear that 'gettextize' is a wizard and
  migration tool.

* gettextize has a new option --dry-run.

* Improved portability to Solaris, OSF/1 and Linux/libc5.

* Improved interoperability with GCC 3.1.

* New documentation sections:
  - CVS Issues
  - mkinstalldirs
  - config.h.in

Version 0.11.2 - April 2002

* Bug fixes in the gettext.m4 autoconf macros.

* New documentation section:
  - Preparing Translatable Strings

Version 0.11.1 - March 2002

* xgettext now also supports Python, Tcl, Awk and Glade.

* msgfmt can create (and msgunfmt can dump) Tcl message catalogs.

* msggrep has a new option -C that allows to search for strings in translator
  comments.

* Bug fixes in the gettext.m4 autoconf macros.

Version 0.11 - January 2002

* New programs:
    msgattrib - attribute matching and manipulation on message catalog,
    msgcat - combines several message catalogs,
    msgconv - character set conversion for message catalog,
    msgen - create English message catalog,
    msgexec - process translations of message catalog,
    msgfilter - edit translations of message catalog,
    msggrep - pattern matching on message catalog,
    msginit - initialize a message catalog,