@@ -1,5 +1,12 @@
 2003-01-23  Bruno Haible  <bruno@clisp.org>
 
+	* msgmerge.c (use_fuzzy_matching): New variable.
+	(long_options): Add option -N/--no-fuzzy-matching.
+	(main, match_domain): Implement it.
+	(usage): Document it.
+
+2003-01-23  Bruno Haible  <bruno@clisp.org>
+
 	* write-mo.c (write_table): Use xmalloc/free instead of alloca/freea
 	for most allocations. Needed for platforms with a small stack, such
 	as Woe32 with a default stack size of 1.2 MB.
